DTS-22011 fixed css alignment

--- a/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
+++ b/UI/src/app/component/cumulative-line-chart/cumulative-line-chart.component.css
@@ -19,6 +19,7 @@
 #chart{
     position: relative;
     overflow-x: auto;
+    width: 100%;
 }
 
 .tooltip-container{
